--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<section id="footer">
 					<!-- <div class="container"> -->
 						<ul class="copyright">
-							<li>&copy; Untitled. All rights reserved.</li>
+							<li>&copy; developerjp. All rights reserved.</li>
 							<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 						</ul>
 					<!-- </div> -->
